--- a/contacto.html
+++ b/contacto.html
@@ -160,9 +160,12 @@
                     </ul>
                 </div>
                 <div class="columna-f4">
-                    <div class="texto-footer1">
-                        <p>Políticas</p>
-                    </div>
+                    <ul>
+                        <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
+                        <li><a href="../CodeHive/recursos-y-plantillas.html"class="active">Recursos y Plantillas</a></li>
+                        <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
+                        <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+                    </ul>
                 </div>
             </div>
             <div class="footer2">
