--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <link rel="stylesheet" href="css/Style.css"/>
         <link rel="stylesheet" href="css/Style-inicio.css"/>
 
+        <!--archivos JS-->
+        <script src="js/clase17.js"></script>
+
         <!--Icono-->
         <link rel="icon" href="img/Icono-CodeHive.ico"/>
     </head>
@@ -102,10 +105,10 @@
                                     <img src="img/plantillas-y-herramientas.jpg" class="img-recursos1" alt="img-recursos1">
                                 </div>
                                 <div class="texto-recursos1">
-                                    <h5>Herramientas <br> y plantillas</h5>
+                                    <h5>Herramientas<br>de interacción</h5>
                                 </div>
                                 <div class="button-recursos">
-                                    <a href="#" class="button">Ver</a>
+                                    <a href="../CodeHive/herramientas-de-interaccion.html" class="button">Ver</a>
                                 </div>
                             </div>
                             <div class="grid2-seccion3">
@@ -113,10 +116,10 @@
                                     <img src="img/libros-y-recursos.jpg" class="img-recursos2" alt="img-recursos2">
                                 </div>
                                 <div class="texto-recursos2">
-                                    <h5>Libros <br> y guías</h5>
+                                    <h5>Recursos<br>y Plantillas</h5>
                                 </div>
                                 <div class="button-recursos">
-                                    <a href="#" class="button">Ver</a>
+                                    <a href="../CodeHive/recursos-y-plantillas.html" class="button">Ver</a>
                                 </div>
                             </div>
                             <div class="grid3-seccion3">
@@ -124,10 +127,10 @@
                                     <img src="img/Ejemplos-de-codigo.jpg" class="img-recursos3" alt="img-recursos3">
                                 </div>
                                 <div class="texto-recursos3">
-                                    <h5>Ejemplos <br> de código</h5>
+                                    <h5>Diccionarios<br>de código</h5>
                                 </div>
                                 <div class="button-recursos">
-                                    <a href="#" class="button">Ver</a>
+                                    <a href="../CodeHive/diccionarios-de-codigos.html" class="button">Ver</a>
                                 </div>  
                             </div>
                             <div class="grid4-seccion3">
@@ -135,10 +138,10 @@
                                     <img src="img/foros-de-discusión.jpg" class="img-recursos4" alt="img-recursos4">
                                 </div>
                                 <div class="texto-recursos4">
-                                    <h5>Foros <br> de discución</h5>
+                                    <h5>Foros<br>de discución</h5>
                                 </div>
                                 <div class="button-recursos">
-                                    <a href="#" class="button">Ver</a>
+                                    <a href="../CodeHive/foros-de-discucion.html" class="button">Ver</a>
                                 </div>
                             </div>
                         </div>
@@ -278,9 +281,12 @@
                         </ul>
                     </div>
                     <div class="columna-f4">
-                        <div class="texto-footer1">
-                            <p>Políticas</p>
-                        </div>
+                        <ul>
+                            <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
+                            <li><a href="../CodeHive/recursos-y-plantillas.html"class="active">Recursos y Plantillas</a></li>
+                            <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
+                            <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="footer2">
