--- a/nosotros.html
+++ b/nosotros.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CodeHive Contacto</title>
+        <title>CodeHive Nosotros</title>
 
         <!--tipografías-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -209,9 +209,12 @@
                     </ul>
                 </div>
                 <div class="columna-f4">
-                    <div class="texto-footer1">
-                        <p>Políticas</p>
-                    </div>
+                    <ul>
+                        <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
+                        <li><a href="../CodeHive/recursos-y-plantillas.html"class="active">Recursos y Plantillas</a></li>
+                        <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
+                        <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+                    </ul>
                 </div>
             </div>
             <div class="footer2">
