--- a/recursos.html
+++ b/recursos.html
@@ -46,27 +46,30 @@
                 </div>
             </div>
         </header>
-        <!--Sección 1 Blog-->
-    <section class="seccion1-blog">
-        <div class="container-margen">
-          <div class="texto-seccion1-blog">
-            <p>
-                ¡Explora nuestros recursos y conviértete en un
-            </p>
-            <h3>maestro del frontend!</h3>
-          </div>
-        </div>
-      </section>
+
+        <!--Sección 1 Recursos-->
+        <section class="seccion1">
+            <div class="container-margen">
+                
+                <div class="columna1-seccion2">
+                    <div class="imagen-seccion2">
+                        <img src="img/Img_Seccion2_recursos.png" class="imagen-seccion2" alt="imagen-seccion2" >
+                    </div>
+                </div>
+                <div class="columna2-seccion2">
+                    <div class="texto-seccion2">
+                        <p>
+                            ¡Explora nuestros recursos y conviértete en un
+                        </p>
+                        <h3>maestro del frontend!</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
   
   <!--Sección 2 Recursos-->
   <section class="seccion2">
     <div class="container-margen">
-        
-        <div class="columna1-seccion2">
-            <div class="imagen-seccion2">
-                <img src="img/Img_Seccion2_recursos.png" class="imagen-seccion2" alt="imagen-seccion2" >
-            </div>
-        </div>
         <div class="columna2-seccion2">
             <div class="texto-seccion2">
                 <p>En esta sección, descubrirás herramientas y conocimientos esenciales para mejorar tus habilidades en el desarrollo frontend. Nuestra colección de recursos está diseñada para mantenerte al día con las últimas tendencias y tecnologías, y te ayudará a crear sitios web impresionantes.
@@ -92,12 +95,12 @@
                     </div>
                     <div class="texto-recursos">
                         <h5>
-                            <span class="verde">Herramientas y plantillas</span>
+                            <span class="verde">Herramientas de interacción</span>
                         </h5>
-                        <p><span class="blanco">Mejora tus habilidades frontend con nuestra selección de editores, herramientas de diseño y plantillas.</span></p>
+                        <p><span class="blanco">Descubre herramientas interactivas que te permiten probar, experimentar y colaborar en tiempo real con código HTML, CSS y JavaScript.</span></p>
                     </div>
                     <div class="button-recursos">
-                        <a href="#" class="button">Ver</a>
+                        <a href="../CodeHive/herramientas-de-interaccion.html" class="button">Ver</a>
                     </div>
                 </div>
             </div>
@@ -120,12 +123,12 @@
                     </div>
                     <div class="texto-recursos">
                         <h5>
-                            <span class="verde">Libros y guías</span>
+                            <span class="verde">Recursos y Plantillas</span>
                         </h5>
-                        <p><span class="blanco">Amplía tus conocimientos con nuestra lista de libros y guías cuidadosamente seleccionados sobre HTML, CSS, JavaScript y más.</span></p>
+                        <p><span class="blanco">Descubre una amplia selección de recursos y plantillas descargables que te ayudarán a crear interfaces frontend de manera eficiente.</span></p>
                     </div>
                     <div class="button-recursos">
-                        <a href="#" class="button">Ver</a>
+                        <a href="../CodeHive/recursos-y-plantillas.html" class="button">Ver</a>
                     </div>
                 </div>
             </div>
@@ -142,12 +145,12 @@
                     </div>
                     <div class="texto-recursos">
                         <h5>
-                            <span class="verde">Ejemplos de código</span>
+                            <span class="verde">Diccionarios de código</span>
                         </h5>
                         <p><span class="blanco">Aprende y mejora tus habilidades en el desarrollo frontend con nuestra selección de ejemplos de código en HTML, CSS, JavaScript y otros lenguajes de programación.</span></p>
                     </div>
                     <div class="button-recursos">
-                        <a href="#" class="button">Ver</a>
+                        <a href="../pruebas/diccionarios-de-codigos.html" class="button">Ver</a>
                     </div>
                 </div>
             </div>
@@ -174,7 +177,7 @@
                         <p><span class="blanco">Únete a nuestra comunidad activa de desarrolladores frontend y comparte tus ideas, preguntas y obtén respuestas en nuestros foros de discusión.</span></p>
                     </div>
                     <div class="button-recursos">
-                        <a href="#" class="button">Ver</a>
+                        <a href="../CodeHive/foros-de-discucion.html" class="button">Ver</a>
                     </div>
                 </div>
             </div>
@@ -208,9 +211,12 @@
                     </ul>
                 </div>
                 <div class="columna-f4">
-                    <div class="texto-footer1">
-                        <p>Políticas</p>
-                    </div>
+                    <ul>
+                        <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
+                        <li><a href="../CodeHive/recursos-y-plantillas.html"class="active">Recursos y Plantillas</a></li>
+                        <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
+                        <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+                    </ul>
                 </div>
             </div>
             <div class="footer2">
