--- a/recursos-y-plantillas.html
+++ b/recursos-y-plantillas.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Slider</title>
 
-  <link rel="stylesheet" href="css/Style.css"/>
+  <link href="../CodeHive/css/Style.css" rel="stylesheet">
   <link href="../CodeHive/css/Texto.css" rel="stylesheet">
   <link href="../CodeHive/slider/slider.css" rel="stylesheet">
   <link href="../CodeHive/css/Style-recursos.css" rel="stylesheet">
