--- a/foros-de-discusion.html
+++ b/foros-de-discusion.html
@@ -41,7 +41,7 @@
   <ul>
     <li>
       <img src="../CodeHive/img/ForoDiscusión.jpg" alt="">
-      <h3>FOROS DE DISCUCIÓN</h3>
+      <h3>FOROS DE DISCUSIÓN</h3>
     </li>
     <li>
       <img src="../CodeHive/img/HerramientasInteractivas.jpg" alt="">
@@ -73,7 +73,7 @@
                   <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
                   <li><a href="../CodeHive/recursos-y-plantillas.html">Recursos y Plantillas</a></li>
                   <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
-                  <li><a href="../CodeHive/foros-de-discucion.html"class="active">Foros de discución</a></li>
+                  <li><a href="../CodeHive/foros-de-discusion.html"class="active">Foros de discusión</a></li>
               </ul>
           </nav>
       </div>
@@ -140,7 +140,7 @@ Nuestro propio foro comunitario es el lugar ideal para compartir tus experiencia
                 <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
                 <li><a href="../CodeHive/recursos-y-plantillas.html">Recursos y Plantillas</a></li>
                 <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
-                <li><a href="../CodeHive/foros-de-discucion.html"class="active">Foros de discución</a></li>
+                <li><a href="../CodeHive/foros-de-discusion.html"class="active">Foros de discusión</a></li>
             </ul>
         </nav>
     </div>
@@ -177,7 +177,7 @@ Nuestro propio foro comunitario es el lugar ideal para compartir tus experiencia
           <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
           <li><a href="../CodeHive/recursos-y-plantillas.html"class="active">Recursos y Plantillas</a></li>
           <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
-          <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+          <li><a href="../CodeHive/foros-de-discusion.html">Foros de discusión</a></li>
       </ul>
       </div>
   </div>
