--- a/herramientas-de-interaccion.html
+++ b/herramientas-de-interaccion.html
@@ -53,7 +53,7 @@
     </li>
     <li>
       <img src="../CodeHive/img/ForoDiscusión.jpg" alt="">
-      <h3>FOROS DE DISCUCIÓN</h3>
+      <h3>FOROS DE DISCUSIÓN</h3>
     </li>
   </ul>
 </div>
@@ -73,7 +73,7 @@
                   <li><a href="../CodeHive/herramientas-de-interaccion.html" class="active">Herramientas de interacción</a></li>
                   <li><a href="../CodeHive/recursos-y-plantillas.html">Recursos y Plantillas</a></li>
                   <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
-                  <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+                  <li><a href="../CodeHive/foros-de-discusion.html">Foros de discusión</a></li>
               </ul>
           </nav>
       </div>
@@ -208,7 +208,7 @@
                   <li><a href="../CodeHive/herramientas-de-interaccion.html" class="active">Herramientas de interacción</a></li>
                   <li><a href="../CodeHive/recursos-y-plantillas.html">Recursos y Plantillas</a></li>
                   <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
-                  <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+                  <li><a href="../CodeHive/foros-de-discusion.html">Foros de discusión</a></li>
               </ul>
           </nav>
       </div>
@@ -245,7 +245,7 @@
           <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
           <li><a href="../CodeHive/recursos-y-plantillas.html"class="active">Recursos y Plantillas</a></li>
           <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
-          <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+          <li><a href="../CodeHive/foros-de-discusion.html">Foros de discusión</a></li>
       </ul>
       </div>
   </div>
