--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                     <img src="img/foros-de-discusión.jpg" class="img-recursos4" alt="img-recursos4">
                                 </div>
                                 <div class="texto-recursos4">
-                                    <h5>Foros<br>de discución</h5>
+                                    <h5>Foros<br>de discusión</h5>
                                 </div>
                                 <div class="button-recursos">
                                     <a href="../CodeHive/foros-de-discucion.html" class="button">Ver</a>
@@ -285,7 +285,7 @@
                             <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
                             <li><a href="../CodeHive/recursos-y-plantillas.html"class="active">Recursos y Plantillas</a></li>
                             <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
-                            <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+                            <li><a href="../CodeHive/foros-de-discusion.html">Foros de discusión</a></li>
                         </ul>
                     </div>
                 </div>
