--- a/recursos.html
+++ b/recursos.html
@@ -177,7 +177,7 @@
                         <p><span class="blanco">Únete a nuestra comunidad activa de desarrolladores frontend y comparte tus ideas, preguntas y obtén respuestas en nuestros foros de discusión.</span></p>
                     </div>
                     <div class="button-recursos">
-                        <a href="../CodeHive/foros-de-discucion.html" class="button">Ver</a>
+                        <a href="../CodeHive/foros-de-discusion.html" class="button">Ver</a>
                     </div>
                 </div>
             </div>
@@ -215,7 +215,7 @@
                         <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
                         <li><a href="../CodeHive/recursos-y-plantillas.html"class="active">Recursos y Plantillas</a></li>
                         <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
-                        <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+                        <li><a href="../CodeHive/foros-de-discusion.html">Foros de discusión</a></li>
                     </ul>
                 </div>
             </div>
