--- a/nosotros.html
+++ b/nosotros.html
@@ -213,7 +213,7 @@
                         <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
                         <li><a href="../CodeHive/recursos-y-plantillas.html"class="active">Recursos y Plantillas</a></li>
                         <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
-                        <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+                        <li><a href="../CodeHive/foros-de-discusion.html">Foros de discusión</a></li>
                     </ul>
                 </div>
             </div>
