--- a/recursos-y-plantillas.html
+++ b/recursos-y-plantillas.html
@@ -49,7 +49,7 @@
     </li>
     <li>
       <img src="../CodeHive/img/ForoDiscusión.jpg" alt="">
-      <h3>FOROS DE DISCUCIÓN</h3>
+      <h3>FOROS DE DISCUSIÓN</h3>
     </li>
     <li>
       <img src="../CodeHive/img/HerramientasInteractivas.jpg" alt="">
@@ -73,7 +73,7 @@
                   <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
                   <li><a href="../CodeHive/recursos-y-plantillas.html"class="active">Recursos y Plantillas</a></li>
                   <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
-                  <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+                  <li><a href="../CodeHive/foros-de-discusion.html">Foros de discusión</a></li>
               </ul>
           </nav>
       </div>
@@ -188,7 +188,7 @@
                 <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
                 <li><a href="../CodeHive/recursos-y-plantillas.html"class="active">Recursos y Plantillas</a></li>
                 <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
-                <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+                <li><a href="../CodeHive/foros-de-discusion.html">Foros de discusión</a></li>
             </ul>
         </nav>
     </div>
@@ -225,7 +225,7 @@
           <li><a href="../CodeHive/herramientas-de-interaccion.html">Herramientas de interacción</a></li>
           <li><a href="../CodeHive/recursos-y-plantillas.html"class="active">Recursos y Plantillas</a></li>
           <li><a href="../CodeHive/diccionarios-de-codigos.html">Diccionarios de código</a></li>
-          <li><a href="../CodeHive/foros-de-discucion.html">Foros de discución</a></li>
+          <li><a href="../CodeHive/foros-de-discusion.html">Foros de discusión</a></li>
       </ul>
       </div>
   </div>
