ventana modal inicio

--- a/index.html
+++ b/index.html
@@ -18,15 +18,25 @@
         <link rel="stylesheet" href="css/Style.css"/>
         <link rel="stylesheet" href="css/Style-inicio.css"/>
 
-        <!--archivos JS-->
-        <script src="js/clase17.js"></script>
-
         <!--Icono-->
         <link rel="icon" href="img/Icono-CodeHive.ico"/>
+
+         <!--archivos JS-->
+         <script src="js/main.js"></script>
     </head>
 
     <!--visible-->
     <body>
+        
+        <!--ventana modal-->
+        <div id="modal" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <h3>Bienvenidos a codehive</h3>
+              <p>El lugar donde tus habilidades frontend crecen</p>
+              <button id="closeModalBtn">Cerrar</button>
+            </div>
+          </div>
 
         <!--header-->
             <header>
@@ -141,7 +151,7 @@
                                     <h5>Foros<br>de discusión</h5>
                                 </div>
                                 <div class="button-recursos">
-                                    <a href="../CodeHive/foros-de-discucion.html" class="button">Ver</a>
+                                    <a href="../CodeHive/foros-de-discusion.html" class="button">Ver</a>
                                 </div>
                             </div>
                         </div>
