ventana modal inicio

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <link rel="icon" href="img/Icono-CodeHive.ico"/>
 
          <!--archivos JS-->
-         <script src="js/main.js"></script>
+         <script src="../CodeHive/js/main.js"></script>
     </head>
 
     <!--visible-->
     <body>
-        
+
         <!--ventana modal-->
         <div id="modal" class="modal">
             <div class="modal-content">
