--- a/blog.html
+++ b/blog.html
@@ -181,6 +181,7 @@
       <p><span class="pequeña"> Copyright © 2023 CODEHIVE</span></p>
   </div>
 </section>
-    
+    <!--archivos JS-->
+    <script src="../CodeHive/js/articulo.js"></script>
   </body>
 </html>
