--- a/recursos.html
+++ b/recursos.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CodeHive</title>
+        <title>CodeHive Recursos</title>
 
         <!--tipografías-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -150,7 +150,7 @@
                         <p><span class="blanco">Aprende y mejora tus habilidades en el desarrollo frontend con nuestra selección de ejemplos de código en HTML, CSS, JavaScript y otros lenguajes de programación.</span></p>
                     </div>
                     <div class="button-recursos">
-                        <a href="../pruebas/diccionarios-de-codigos.html" class="button">Ver</a>
+                        <a href="../CodeHive/diccionarios-de-codigos.html" class="button">Ver</a>
                     </div>
                 </div>
             </div>
@@ -223,5 +223,7 @@
                 <p><span class="pequeña"> Copyright © 2023 CODEHIVE</span></p>
             </div>
         </section>
+        <!--archivos JS-->
+        <script src="../CodeHive/js/recursos.js"></script>
     </body>
 </html>
