--- a/nosotros.html
+++ b/nosotros.html
@@ -115,6 +115,15 @@
                     <div class="grid-equipo1">
                         <div class="grid1-equipo">
                             <div class="img-equipo">
+                                <img src="img/StefanyCruz.jpg" class="img-equipo" alt="img-equipo">
+                            </div>
+                            <div class="texto-equipo">
+                                <h4>Stefany Cruz</h4>
+                                <h6 class="negro">Estudiante Frontend</h6>
+                            </div>  
+                        </div>
+                        <div class="grid2-equipo">
+                            <div class="img-equipo">
                                 <img src="img/MarielysHerrera.jpg" class="img-equipo" alt="img-equipo">
                             </div>
                             <div class="texto-equipo">
@@ -122,21 +131,12 @@
                                 <h6 class="negro">Estudiante Frontend</h6>
                             </div>  
                         </div>
-                        <div class="grid2-equipo">
+                        <div class="grid3-equipo">
                             <div class="img-equipo">
                                 <img src="img/NadiaNievas.jpg" class="img-equipo" alt="img-equipo">
                             </div>
                             <div class="texto-equipo">
                                 <h4>Nadia Nievas</h4>
-                                <h6 class="negro">Estudiante Frontend</h6>
-                            </div>  
-                        </div>
-                        <div class="grid3-equipo">
-                            <div class="img-equipo">
-                                <img src="img/JuliethGaray.jpg" class="img-equipo" alt="img-equipo">
-                            </div>
-                            <div class="texto-equipo">
-                                <h4>Juliet Garay</h4>
                                 <h6 class="negro">Estudiante Frontend</h6>
                             </div>  
                         </div>
@@ -221,5 +221,8 @@
                 <p><span class="pequeña"> Copyright © 2023 CODEHIVE</span></p>
             </div>
         </section>
+        
+        <!--archivos JS-->
+        <script src="../CodeHive/js/equipo.js"></script>
     </body>
 </html>
