--- a/index.html
+++ b/index.html
@@ -22,10 +22,23 @@
         <!--Icono-->
         <link rel="icon" href="img/Icono-CodeHive.ico"/>
 
+         <!--archivos JS-->
+         <script src="../CodeHive/js/main.js" defer></script>
+
     </head>
 
     <!--visible-->
     <body>
+
+        <!--ventana modal-->
+        <div id="modal" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <h3 class="title">¡Bienvenidos a Codehive!</h3>
+              <p class= "texto">"Descubre una amplia variedad de recursos divertidos y dinámicos para tu desarrollo frontend"</p>
+              <button id="closeModalBtn">Cerrar</button>
+            </div>
+          </div>
 
         <!--header-->
             <header>
@@ -294,7 +307,6 @@
                 </div>
             </section>
 
-            <!--archivos JS-->
-         <script src="../CodeHive/js/main.js"></script>
+           
     </body>
 </html>
