--- a/recursos.html
+++ b/recursos.html
@@ -23,6 +23,9 @@
 
         <!--Boostrap-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+
+        <!--archivos JS-->
+        <script src="../CodeHive/js/recursos.js" defer></script>
     </head>
     
     <!--visible-->
@@ -223,7 +226,6 @@
                 <p><span class="pequeña"> Copyright © 2023 CODEHIVE</span></p>
             </div>
         </section>
-        <!--archivos JS-->
-        <script src="../CodeHive/js/recursos.js"></script>
+        
     </body>
 </html>
