--- a/contacto.html
+++ b/contacto.html
@@ -111,16 +111,16 @@
                         <div class="grid1-seccion3-contacto">
                             <div class="form">
                                 <label for="nombre">Nombre:</label>
-                                <input type="nombre" id="nombre"  placeholder="Ingresa nombre y apellido" class="input-field">
+                                <input type="text" id="nombre" placeholder="Ingresa nombre y apellido" class="input-field">
                                 <br>
                                 <label for="correo">Correo electrónico:</label>
-                                <input type="correo" id="correo" placeholder="Ingresa un correo válido" class="input-field">
+                                <input type="email" id="correo" placeholder="Ingresa un correo válido" class="input-field">
                                 <br>
                                 <label for="mensaje">Mensaje:</label>
                                 <textarea name="mensaje" cols="30" rows="10" id="mensaje" placeholder="Deja tu mensaje"></textarea>
                                 <br>
                                 <button type="submit" onclick="leerDatos()">Enviar</button>
-                            </div>
+                            </div>                            
                         </div>
                         <div class="grid2-seccion3-contacto">
                             <div class="imagen-seccion3-contacto">
