--- a/foros-de-discusion.html
+++ b/foros-de-discusion.html
@@ -64,9 +64,9 @@
 
  <!--Cabezote Blog-->
  <section class="seccion-titulo">
-    <div class="texto-texto">
-      <h4>Recursos</h4>
-    </div>
+  <div class="texto-texto">
+    <h4>Recursos</h4>
+  </div>
 </section>
 
  <!--SUBMENU-->
@@ -186,7 +186,21 @@ Nuestro propio foro comunitario es el lugar ideal para compartir tus experiencia
           </div>
         </div>
       </div>
-      
+      <section class="seccion-titulo">
+        <div class="texto-texto">
+          <h4>Registrate en<span class="verde"> CodeHive</span></h4>
+          <p>
+          ¡Comenta, interactúa y forma parte de nuestra comunidad! Inicia sesión o regístrate para unirte a las conversaciones en nuestro fascinante foro.</p>
+          <div class="buttons">
+            <div class="button1">
+              <a href="../CodeHive/" class="button">Iniciar sesión</a>
+            </div>
+            <div class="button2">
+              <a href="../CodeHive/registrar.html" class="button">Registrar</a>
+            </div>
+          </div>
+        </div>
+      </section>
       <div class="fondo-form">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" placeholder="Ingresa nombre y apellido" class="input-field">
