--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -16,7 +16,7 @@
 </head>
 
 <!--archivos JS-->
-<script src="../CodeHive/js/registrar.js" defer></script>
+<script src="../CodeHive/js/iniciar-sesion.js" defer></script>
 
 <body>
   
@@ -44,14 +44,11 @@
 <div class="Fondo">
   <div class="container-margen">
     <div class="margen-contenido">
-      <h4>Registrate en<span class="verde"> CodeHive</span></h4>
+      <h4>Inicia sesión en<span class="verde"> CodeHive</span></h4>
       <p>
         Al registrarte, tendrás la oportunidad de unirte a nuestro vibrante foro y disfrutar de una experiencia enriquecedora de interacción y aprendizaje colaborativo con una comunidad de usuarios apasionados.</p>
         
         <div class="form">
-          <label for="nombre">Nombre:</label>
-          <input type="text" id="nombre" placeholder="Ingresa nombre y apellido" class="input-field">
-          <br>
           <label for="correo">Correo electrónico:</label>
           <input type="email" id="correo" placeholder="Ingresa un correo válido" class="input-field">
           <br>
@@ -59,8 +56,8 @@
           <input type="password" id="contrasena" placeholder="Crea una contraseña" class="input-field">
           <br>
           <div class="buttons">
-            <button type="button" onclick="agregarUsuario()">Registrar</button>
-            <a href="../CodeHive/iniciar-sesion.html" class="button">Iniciar sesión</a>
+            <button type="button" onclick="agregarUsuario()">Iniciar sesión</button>
+            <a href="../CodeHive/registrar.html" class="button">Registrar</a>
           </div>
         </div>        
         
