--- a/foros-de-discusion.html
+++ b/foros-de-discusion.html
@@ -193,7 +193,7 @@ Nuestro propio foro comunitario es el lugar ideal para compartir tus experiencia
           ¡Comenta, interactúa y forma parte de nuestra comunidad! Inicia sesión o regístrate para unirte a las conversaciones en nuestro fascinante foro.</p>
           <div class="buttons">
             <div class="button1">
-              <a href="../CodeHive/" class="button">Iniciar sesión</a>
+              <a href="../CodeHive/iniciar-sesion.html" class="button">Iniciar sesión</a>
             </div>
             <div class="button2">
               <a href="../CodeHive/registrar.html" class="button">Registrar</a>
